<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:textSize="18sp"
        android:padding="8dp"
        android:id="@+id/topicTv"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_id"
        android:textSize="18sp"
        android:padding="8dp"
        android:id="@+id/meetingIdTv"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/start_meeting"
            android:textSize="16sp"
            android:padding="4dp"
            android:id="@+id/startMeetingBtn"
            android:layout_margin="4dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/join_meeting"
            android:textSize="16sp"
            android:padding="4dp"
            android:id="@+id/joinMeetingBtn"
            android:layout_margin="4dp"
            />
    </LinearLayout>


</LinearLayout>